# DeployLangChain

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
src/deploy_langchain/: main_pdf_rag_faiss.py
